# onshape-mcp

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: release-prep.yml  release-publish.yml  release.yml  test.yml
examples/: cabinet_assembly.md
knowledge_base/: README.md  assembly_workflow_guide.md
knowledge_base/api/: feature_creation_research.md  onshape_api_overview.md  real_sketch_example.json  sketch_creation_guide.md
knowledge_base/cad/: cad_best_practices.md
knowledge_base/examples/: parametric_bracket.md
onshape_mcp/: __init__.py  server.py
onshape_mcp/analysis/: __init__.py  face_cs.py  interference.py  positioning.py
onshape_mcp/api/: assemblies.py  client.py  documents.py  export.py  featurescript.py  featurestudio.py  partstudio.py  variables.py
onshape_mcp/builders/: batch.py  boolean.py  chamfer.py  extrude.py  fillet.py  loft.py  mate.py  pattern.py  revolve.py  sketch.py  sweep.py  thicken.py
onshape_mcp/featurescript/: __init__.py  builders.fs
tests/: conftest.py  test_server.py
tests/analysis/: test_face_cs.py  test_interference.py  test_positioning.py
tests/api/: test_assemblies.py  test_client.py  test_documents.py  test_export.py  test_featurescript.py  test_featurestudio.py  test_partstudio.py  test_variables.py
tests/builders/: test_batch.py  test_boolean.py  test_chamfer.py  test_extrude.py  test_fillet.py  test_loft.py  test_mate.py  test_pattern.py  test_revolve.py  test_sketch.py  test_sweep.py  (+1 more)
